    AptPkg's Config about possible sources.list files. Closes: #557961
  * call AptPkg::Config::_config->init before asking for configuration details

  [ gregor herrmann ]
  * Add Provides and Replaces to lib/Debian/Control/Stanza{,/Binary}.pm.
  * Uppercase "DISCLAIMER" in generated debian/copyright to make it more
    easily visible.

  [ Salvatore Bonaccorso ]
  * debian/copyright: Update to revision 135 of DEP5 Format-Specification for
    machine readable copyright file. 
  * Referesh template for debian/copyright to follow the revision 135 or DEP5
    Format-Specification. Update URI of the format specification.
  * Do not append found entry for examples and docs to the corresponding file,
    but open a new file with the found entries. Slightly improve the routines
    to avoid dublicated entries in package.examples and package.docs when using
    --refresh. 
  * debian/control: Add libarray-unique-perl to (Build-)Depends. 
  * Small code readability changes in dh-make-perl modules. 

 -- Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>  Sun, 03 Jan 2010 11:03:37 +0100

dh-make-perl (0.61) unstable; urgency=low

  [ Salvatore Bonaccorso ]
  * Update template license text for debian/copyright to follow the DEP5
    Format-Specification at http://dep.debian.net/deps/dep5/. Update texts
    layout and drop use of License-Alias: Perl.

  [ gregor herrmann ]
  * Make sure we use the original $ENV{'PWD'} before CPAN::Distribution::get()
    resets it, otherwise the package ends up under $HOME/.cpan with the --cpan
    option.
  * Add a note to the disclaimer in the generated debian/copyright file.
  * Remove README, it's just an excerpt of the POD/manpage.
  * debian/copyright: convert to the DEP5 format.

  [ Damyan Ivanov ]
  * when considering a core module dependency, use 'perl' package instead of
    'perl-modules'

 -- gregor herrmann <gregoa@debian.org>  Wed, 11 Nov 2009 17:10:05 +0100

dh-make-perl (0.60) unstable; urgency=low

  [ Ryan Niebur ]